--- a/CSS- My Site/index.html
+++ b/CSS- My Site/index.html
@@ -23,7 +23,7 @@
       <div class="profile">
         <img src="Dennis circle FB.png" alt="Dennis profile pic">
         <h2>Hello.</h2>
-      <p>I am the General Manager at Jameson's Charhouse in Skokie. I enjoy working out, doing computer stuff, hanging out with Eleanor, and just basically doing nothing.</p>
+      <p>I am the General Manager at Jameson's Charhouse in Skokie. I enjoy working out, doing computer stuff, hanging out with Eleanor, and just basically doing nothing. Yup, really exciting.</p>
       </div>
       <hr>
       <div class="skills">
