--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
       <h1>I'm Dennis</h1>
-      <p>a <span class="mini">mini</span> nerd</p>
+      <h2>a <span class="mini">mini</span> nerd</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
       <img src="images/mountain.png" alt="mountain-img" />
     </div>
@@ -29,13 +29,13 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR1-c20mypwIvazdfRFkTV-eUNAIRCs79WpXA&usqp=CAU" alt="Managing Morons">
+          <img class="manager-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR1-c20mypwIvazdfRFkTV-eUNAIRCs79WpXA&usqp=CAU" alt="Managing Morons">
           <h3>General Manager</h3>
           <p>I wouldn't really call it a skill, more of a necessity to have to deal with incompentant morons.</p>
         </div>
         <div class="skill-row">
-          <img class="" src="https://lh3.googleusercontent.com/proxy/cOd3DxwUwcEx0tQ9rOIrobHUsunyPV5x9mBKmKuXVYrKu_eOHchKS8LmFq0YK3uARxJeW0_KKL0ysXemJUoMKv9sPXeD8zTqwz74QZfiO3lx_g" alt="Cook">
-          <h3>Head Chef of my household</h3>
+          <img class="cook-img" src="https://lh3.googleusercontent.com/proxy/cOd3DxwUwcEx0tQ9rOIrobHUsunyPV5x9mBKmKuXVYrKu_eOHchKS8LmFq0YK3uARxJeW0_KKL0ysXemJUoMKv9sPXeD8zTqwz74QZfiO3lx_g" alt="Cook">
+          <h3>Head Chef of my Household</h3>
           <p>I am a great chef, and when it comes to the grill, there is nobody better in my house than me.</p>
         </div>
       </div>
