minor update...add contact button

--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
       <h1>I'm Dennis</h1>
       <h2>a <span class="mini">mini</span> nerd</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
-      <img src="images/mountain.png" alt="mountain-img" />
+      <img src="https://images.squarespace-cdn.com/content/v1/5348b041e4b05d350c6d7c21/1575108423959-FCOJFUP28KLB1XBB8QA2/ke17ZwdGBToddI8pDm48kDLNi4VuRPPv4o6xvaQaV48UqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYy7Mythp_T-mtop-vrsUOmeInPi9iDjx9w8K4ZfjXt2dgPj-jb3FIxaFObZnptc5ZqmTvRvnyT87dNVz9QRODYYMW9u6oXQZQicHHG1WEE6fg/NightSkyline2015_Squarespace.jpg" alt="Chicago-skyline-img" />
     </div>
 
     <div class="middle-container">
       <div class="profile">
         <img src="Dennis circle FB.png" alt="Dennis profile pic">
         <h2>Hello.</h2>
-      <p>I am the General Manager at Jameson's Charhouse in Skokie. I enjoy working out, doing computer stuff, hanging out with Eleanor, and just basically doing nothing.</p>
+      <p class="intro">I am the General Manager at Jameson's Charhouse in Skokie. I enjoy working out, doing computer stuff, hanging out with Eleanor, and just basically doing nothing.</p>
       </div>
       <hr>
       <div class="skills">
@@ -34,15 +32,15 @@
           <p>I wouldn't really call it a skill, more of a necessity to have to deal with incompentant morons.</p>
         </div>
         <div class="skill-row">
-          <img class="cook-img" src="https://lh3.googleusercontent.com/proxy/cOd3DxwUwcEx0tQ9rOIrobHUsunyPV5x9mBKmKuXVYrKu_eOHchKS8LmFq0YK3uARxJeW0_KKL0ysXemJUoMKv9sPXeD8zTqwz74QZfiO3lx_g" alt="Cook">
+          <img class="cook-img" src="https://lh3.googleusercontent.com/proxy/4mXz4_WSRT0yImr7dScVhpps8I2Joo2xTKNA-yIhZO7IBJtR33kSEbofHqQKrmi5Jbtj4HqqwbQOEf907ZpsEFDzd7xZ0ydZSteb4qjopHe8jg" alt="Cook">
           <h3>Head Chef of my Household</h3>
           <p>I am a great chef, and when it comes to the grill, there is nobody better in my house than me.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3>If you have to deal with morons daily, contact me.</h3>
+        <h2 >Get In Touch</h2>
+        <h4>If you have to deal with morons daily, contact me.</h4>
         <p>If you are like me, and have unreliable, incompentant, completely worthless people working for you, contact me.  We can get through this together.</p>
         <a class="btn" href="mailto:DennisGarbis107@email.com">CONTACT ME</a>
       </div>
@@ -51,9 +49,9 @@
 
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/dennis-garbis-70a0a8a/">LinkedIn</a>
-      <a class="footer-link" href="https://www.facebook.com/dennis.garbis.5//">Facebook</a>
+      <a class="footer-link" href="https://www.facebook.com/dennis.garbis.5/">Facebook</a>
       <a class="footer-link" href="https://nionio78.github.io/cv/">Personal Website</a>
-      <p>© 2020 Dennis Garbis.</p>
+      <p class="copyright">© 2020 Dennis Garbis.</p>
     </div>
 
   </body>
