--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/dennis-garbis-70a0a8a/">LinkedIn</a>
-      <a class="footer-link" href="https://www.facebook.com/dennis.garbis.5/">Facebook</a>
+      <a class="footer-link" href="https://www.facebook.com/dennis.garbis.5">Facebook</a>
       <a class="footer-link" href="https://nionio78.github.io/cv/">Personal Website</a>
       <p class="copyright">© 2020 Dennis Garbis.</p>
     </div>
